# duckstream

./: .gitignore  CLAUDE.md  CODEBASE.md  CONVERSATION.md  EVOLUTION.md  PLAN.md  REQUIREMENTS.md  bag-algebra-vs-z-sets.md  main.py  pyproject.toml
.hypothesis/constants/: 6812e8c00d7117e3  da39a3ee5e6b4b0d  fbab49e5c8512ee4
.hypothesis/examples/04e6b3400353b141/: 5ba4c2c7fa797ef8  ca5a2265b0fe275e
.hypothesis/examples/5ba4c2c7fa797ef8/: 6cff573eca9c8086
.hypothesis/examples/ca5a2265b0fe275e/: 043af3760e659bf2  0d3772af5fb78821  0dd9d815a89e7580  1ff112dd3e2b0747  23f0d17f35bed682  3378a1388af66c91  3a91eacc205b1bb2  42051bd96c6aa6b0  49ae2ca9a8918147  563f6c8d97cde4e8  5b6915eab6690375  5e5ff1e64b111874  60b43a16847eacc5  6c93422747faad26  70870e37454d7a81  7959ba0f15b0be6d  7bda36916fe89771  8bda92b5e37251db  9f26ac2fd2b053d1  c0a3bfa9da702f80  c5d2ed2a551e2c1b  cbb8cf8a041b1a9b  cbe765aa882f4f97  d043d214a6eddefe  e4ac88fb9dcdb869  efbb2f9c911be698
src/ducklake_ivm/: __init__.py  compiler.py  plan.py
src/duckstream/: __init__.py  compiler.py  file_loader.py  materialized_view.py  orchestrator.py  plan.py  utils.py
src/duckstream/cli/: __init__.py  dev_cmd.py  init_cmd.py  maintain_cmd.py  plan_cmd.py  watch_cmd.py
src/duckstream/compiler/: __init__.py  aggregates.py  distinct.py  full_refresh.py  infrastructure.py  join.py  join_aggregate.py  outer_join.py  router.py  select.py  set_ops.py  subquery.py
tests/: conftest.py  strategies.py  test_aggregate.py  test_effectors.py  test_full_refresh.py  test_ivm.py  test_join.py  test_join_aggregate.py  test_outer_join.py  test_select.py  test_sinks.py  test_sources.py  test_utils.py
tests/file_loader/: test_file_loader.py
tests/integration/: test_end_to_end.py  test_orchestrator.py
tests/ivm/: test_distinct.py  test_having.py  test_set_ops.py  test_subquery.py
tests/strategies/: __init__.py  aggregate.py  distinct.py  having.py  join.py  join_aggregate.py  outer_join.py  primitives.py  select.py  set_ops.py  subquery.py
(+11 files in other folders)
