[project]
name = "ducklake-ivm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytz>=2025.2",
    "sqlglot>=28.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ducklake_ivm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
