[project]
name = "duckstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytz>=2025.2",
    "sqlglot>=28.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckstream"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
